Fix overflow issue on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap');
 
 *, *::before, *::after{
-	// margin: 0;
-	// padding: 0;
-
 	box-sizing: border-box;
 }
 
@@ -93,7 +90,6 @@ body{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// gap: -30px;
 	p:nth-child(2){
 		margin-bottom: -10px;
 	}
@@ -173,8 +169,6 @@ form{
 	}
 
 	>input:focus{
-		// outline: 1px --primary;
-		// border: none;
 		outline: 3px solid var(--white);
 	}
 
@@ -229,4 +223,11 @@ dialog{
 	background-color: var(--primary);
 	border: 5px solid var(--secondary);
 	border-radius: 50px;
+}
+
+@media only screen and (max-width: 400px) {
+	.footer{
+		height: 60px;
+		text-align: center;
+	}
 }
